refactor(skills): redesign skill system to be script-based and file-driven
- Align with Gemini CLI standard using SKILL.md and YAML frontmatter.
- Support script-based tools (Bash, Python, etc.) defined in frontmatter.
- Implement ScriptToolSet for dynamic execution of external scripts.
- Introduce SkillLoader, SkillService, and SkillRuntime abstractions.
- Support lazy loading of skill instructions and dynamic tool registration.
- Add YAML parsing via Jackson.
- Port integration tests to verify script tool execution.